[package]
name = "vastline"
version = "0.1.0"
edition = "2021"
description = "A Claude Code status line for vast.ai: running/total GPU instances, running vs total burn rate, account balance, and runway — read-only scoped key, cached off the render path."
license = "MIT"
repository = "https://github.com/Entrolution/vastline"
readme = "README.md"

[[bin]]
name = "vastline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order keeps the user's existing settings.json key order on install.
serde_json = { version = "1", features = ["preserve_order"] }

# Small, self-contained release binary for distribution. Network I/O is delegated to the
# system `curl`, so there is no TLS stack to link — deps stay limited to serde, like quotaline.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
